--- a/smartcontrol/build.gradle
+++ b/smartcontrol/build.gradle
@@ -20,6 +20,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
 }
 
 dependencies {
@@ -27,9 +32,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile files('libs/okhttp-3.3.0.jar')
+    compile files('libs/okio-1.8.0.jar')
+    compile(name: 'lenovoid-sdk-custom-release', ext: 'aar')
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile files('libs/okhttp-3.3.0.jar')
-    compile files('libs/okio-1.8.0.jar')
 }
