2018/03/02 release note : add mqtt module(display device msg, control app download)

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,27 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+ext{
 
+    compileSdkVersion = 24
+    buildToolsVersion = '23.0.3'
+
+
+    group = 'org.eclipse.paho'
+
+    sampleArchivesBaseName = 'org.eclipse.paho.android.sample'
+    sampleVersion = '1.1.1'
+
+    serviceArchivesBaseName = 'org.eclipse.paho.android.service'
+    serviceVersion = '1.1.1'
+
+    clientVersion = '1.1.0'
+
+    mavenUrl = "https://repo.eclipse.org/content/repositories/paho-releases/"
+
+    supportLibVersion = '24.2.1'
+
+}
 allprojects {
     repositories {
         jcenter()
