--- a/smartcontrol/src/main/AndroidManifest.xml
+++ b/smartcontrol/src/main/AndroidManifest.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.lenovo.smartcontrol"
-    android:sharedUserId="android.uid.system">
+    android:sharedUserId="android.uid.system"><!--android:sharedUserId="android.uid.system"-->
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INSTALL_PACKAGES" />
-    <uses-permission android:name="android.permission.GET_PACKAGE_SIZE"/>
+    <uses-permission android:name="android.permission.GET_PACKAGE_SIZE" />
     <uses-permission android:name="android.permission.DELETE_PACKAGES" />
+    <uses-permission android:name="android.permission.BATTERY_STATS"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <!--<uses-permission
+        android:name="android.permission.PACKAGE_USAGE_STATS"
+        tools:ignore="ProtectedPermissions"/>-->
+
 
     <!-- LenovoID权限的配置  android:sharedUserId="android.uid.system" -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
@@ -25,17 +30,17 @@
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
-    <!-- 是否海外版 -->
-    <meta-data
-        android:name="lenovoid:oversea"
-        android:value="false" />
+
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/control"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/control"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.LanguageActivity">
@@ -71,12 +76,19 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".activity.LockDeviceActivity"></activity>
-        <activity android:name=".activity.MainActivity"/>
+        <activity android:name=".activity.LockDeviceActivity" />
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.QRCodeActivity" />
+        <activity android:name=".activity.WifiConnectActivity"/>
+        <activity android:name=".LenovoId.LoginIdActivity"/>
 
+
+        <!-- 是否海外版 -->
+        <meta-data
+            android:name="lenovoid:oversea"
+            android:value="false" />
 
         <!-- start for sdk only -->
-
         <activity
             android:name="com.lenovo.lsf.lenovoid.ui.PsLoginActivity"
             android:configChanges="orientation|keyboardHidden"
@@ -101,8 +113,6 @@
             android:name="lenovo:applicationToken"
             android:value="BGWJ03ZCYLCQ" />
 
-        <!-- 以上全是LenovoID sdk需要的 -->
-
         <service
             android:name=".LenovoId.AuthenticatorService"
             android:enabled="true"
@@ -126,6 +136,19 @@
                 android:resource="@xml/motoid_lsf_file_paths" />
         </provider>
         <!-- end for sdk only -->
+
+        <receiver android:name=".receiver.SCBroadCastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+        <!-- Mqtt Service -->
+        <service android:name="org.eclipse.paho.android.service.MqttService">
+        </service>
+
+        <service android:name=".service.DeviceService"
+            android:exported="true"/>
+
     </application>
 
 </manifest>
