--- a/smartcontrol/src/main/AndroidManifest.xml
+++ b/smartcontrol/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
         android:roundIcon="@mipmap/control"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.LanguageActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -77,7 +77,7 @@
         </receiver>
 
         <activity android:name=".activity.LockDeviceActivity" />
-        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.LanguageActivity" />
         <activity android:name=".activity.QRCodeActivity" />
         <activity android:name=".activity.WifiConnectActivity"/>
         <activity android:name=".LenovoId.LoginIdActivity"/>
